// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApproveTransactionHeader should render correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 99,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 16,
        "paddingVertical": 8,
      }
    }
    testID="APPROVAL_TAG_URL_ORIGIN_PILL"
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 16,
          "height": 24,
          "marginRight": 8,
          "overflow": "hidden",
          "width": 24,
        }
      }
    >
      <Image
        onError={[Function]}
        resizeMode="contain"
        source={
          {
            "uri": "",
          }
        }
        style={
          {
            "flex": 1,
            "height": undefined,
            "width": undefined,
          }
        }
        testID="favicon-avatar-image"
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#686e7d",
          "flexShrink": 1,
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      https://metamask.github.io
    </Text>
  </View>
  <TouchableOpacity
    style={
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "padding": 16,
      }
    }
    testID="account-balance"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
      testID="account-base"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 8,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="account-avatar"
            >
              <View
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Sepolia
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account 1
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
              "marginLeft": "auto",
            }
          }
        >
          Balance
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Bold",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`ApproveTransactionHeader should return origin to be null when not present 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    style={
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 10,
        "padding": 16,
      }
    }
    testID="account-balance"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
      testID="account-base"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "marginRight": 8,
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 8,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
              testID="account-avatar"
            >
              <View
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": -0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Sepolia
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-start",
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Account 1
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
              "marginLeft": "auto",
            }
          }
        >
          Balance
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Bold",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          0
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;
